# k3s-lab

./: .gitattributes  .gitignore  .sops.yaml  .yamllint.yaml  EFFICIENCY_REPORT.md  MIGRATION.md  Makefile  README-snarf-scripts.md  README.md  SECURITY.md  all.yaml  authentik-chain.pem  authentik-values.yaml  export-helm-state.sh  history.txt  k8s-snarf-balanced.sh  k8s-snarf-clean.sh  k8s-snarf-minimal.sh  k8s-snarf.sh  pg-recover.yaml  renovate.json  repo-map.txt  rsync-helper.yaml  smoke-tests.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: build-agent-os.yaml  build-juggler.yaml  validate.yaml
.specstory/history/: 2025-06-29_00-15Z-reduce-snarf-script-output-size.md  2025-07-03_19-18Z-refactor-repository-structure-for-flux.md
apps/: kustomization.yaml
apps/agent-os/: certificate.yaml  deployment.yaml  namespace.yaml  (+5 more)
bootstrap/: BOOTSTRAP.md  age.agekey.age
infrastructure/: kustomization.yaml  namespaces.yaml
scripts/: flux-setup.sh  generate-secrets.sh  setup.sh
secrets/: kustomization.yaml  secret-init-job.yaml  secret-init-role.yaml  secret-init-rolebinding.yaml  secret-init-serviceaccount.yaml
tools/roastbot/: Dockerfile  PULL_REQUEST_DESCRIPTION.md  README.md  config.example.yaml  pyproject.toml
tools/roastbot/roastbot/: cli.py  config.py  controller.py  diff_utils.py  github_client.py  json_utils.py  llm.py  llm_openai.py  state.py
tools/roastbot/roastbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/roastbot/tests/: test_diff_utils.py  test_prompt.py  test_state.py
(+436 files in other folders)
