[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roastbot"
version = "0.1.0"
description = "A savage code review bot that roasts PRs while being technically useful"
authors = [{ name = "openhands", email = "openhands@all-hands.dev" }]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
  "pydantic>=2.9",
  "tenacity>=8.4",
  "rich>=13.7",
  "typer>=0.12",
  "openai>=1.51.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "requests-mock>=1.12",
]

[project.scripts]
roastbot = "roastbot.cli:app"
